<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ThirdActivity">

    <TextView
        android:id="@+id/textmsg1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/intentTextStyle" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/yellowstar"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <TextView
        android:id="@+id/texttitle1"
        style="@style/titleStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title2" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textcontent1"
                style="@style/contentStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/content2" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>